adding initial implementation of the create movie api (#5)
